# s2n-tls

bindings/rust/bench/: .gitignore  Cargo.toml  README.md  bench-memory.sh  bench-with-aws-lc.sh  heaptrack.memory.134833.zst  heaptrack.memory.165307.zst  svg-to-png.sh  use-awslc-rustls.sh  use-awslc-s2n.sh  use-awslc.sh
bindings/rust/bench/benches/: bulk-transfer.rs  handshake.rs  memory.rs  throughput.rs
bindings/rust/bench/memory/: bench-memory.sh
bindings/rust/bench/src/: harness.rs  lib.rs  new_harness.rs  openssl.rs  rustls.rs  s2n_tls.rs
