[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
s2n-tls = { path = "../s2n-tls" }
rustls = { path = "target/rustls/rustls" }
rustls-pemfile = "1.0"
openssl = { version = "0.10", features = [ "vendored" ] }
errno = "0.3"
libc = "0.2"
crabgrind = "0.1"
rand = "0.8"
rand_distr = "0.4"
serde_json = "1.0"
csv = "1.2"
plotters = "0.3.3"
semver = "1.0"

[dev-dependencies]
criterion = "0.3"

[features]
s2n-only = []

[[bench]]
name = "handshake"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "memory"
harness = false
bench = false
